--- a/zeta-factor.ipynb
+++ b/zeta-factor.ipynb
@@ -6,16 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "unbcf_fast library is not present...\n",
-      "Falling back to slow python only backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +59,7 @@
    ],
    "source": [
     "# thickness_map_left=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/Thickness Map_leftSide.dm3')\n",
-    "thickness_map=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/Thickness Map.dm3')\n",
+    "thickness_map=hs.load('../../Data/unheated/Thickness Map.dm3')\n",
     "l = 104 # From Andreas\n",
     "thickness = thickness_map.isig[100.:200.,70.:190.].data.mean()*l\n",
     "print(thickness)"
@@ -488,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/matplotlib/__init__.py:898: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "C:\\Users\\Johannes\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\matplotlib\\__init__.py:898: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
       "  warnings.warn(self.msg_depr % (key, alt_key))\n"
      ]
     }
@@ -506,11 +497,11 @@
     "# # Non-heat treated\n",
     "# s=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/A_EDS Spectrum Image.hdf5')\n",
     "# s=s.inav[60.:180.,:]\n",
-    "# s=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/A_EDS Spectrum Image_60-180.hdf5')\n",
+    "s=hs.load('../../Data/unheated/A_EDS Spectrum Image_60-180.hdf5')\n",
     "# return\n",
     "# s.plot()\n",
     "# return\n",
-    "s=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/B_EDS Spectrum Image.hdf5')\n",
+    "# s=hs.load('/home/johannes/Desktop/Link to Documents/Materialfysikk/Data/unheated/B_EDS Spectrum Image.hdf5')\n",
     "    # # s.plot()\n",
     "    # # s.change_dtype('float')\n",
     "    # # s.decomposition()\n",
@@ -527,27 +518,29 @@
     "BW3=BW2\n",
     "# BW4 = np.array([9.4,9.6,10.2,10.4])\n",
     "# BW4=[8.57,8.67,11.2,11.3]\n",
-    "BW4=[7.3,7.5,10.5,10.7]\n",
+    "# BW4=[7.3,7.5,10.5,10.7]\n",
+    "BW4=BW2\n",
     "# BW5 = np.array([2.2,2.4,3.7,3.9])\n",
     "BW5=[1.88,1.96,3.7,3.9]\n",
     "BW3=BW5 #Gold M-alpha\n",
     "\n",
     "# bw=[BW1,BW2,BW3,BW4,BW5]\n",
-    "# bw=[BW1,BW2,BW4,BW5]\n",
-    "bw=[BW3,BW4,BW5]\n",
+    "bw=[BW1,BW2,BW4,BW5]\n",
+    "# bw=[BW3,BW4,BW5]\n",
     "\n",
     "\n",
     "plt.close('all')\n",
     "# elements=['As','Ga','Au','Ge','Pd']\n",
-    "# elements=['As','Ga','Ge','Pd']\n",
-    "elements=['Au','Ge','Pd']\n",
+    "elements=['As','Ga','Ge','Pd']\n",
+    "# elements=['Au','Ge','Pd']\n",
     "s.add_elements(elements)\n",
     "# lines=['As_Ka','Ga_Ka','Au_Ma','Ge_Ka','Pd_La']\n",
-    "lines=['Au_Ma','Ge_Ka','Pd_La']\n",
+    "lines=['As_Ka','Ga_Ka','Ge_Ka','Pd_La']\n",
+    "# lines=['Au_Ma','Ge_Ka','Pd_La']\n",
     "s.add_lines(lines)\n",
     "# s.add_lines()\n",
     "s.mean('x').mean('y').plot(background_windows=bw)\n",
-    "s.set_microscope_parameters(real_time=0.01,beam_current=probe_current[1])\n",
+    "s.set_microscope_parameters(real_time=0.01,beam_current=probe_current[0])\n",
     "s_ints = s.get_lines_intensity(integration_windows=1.2,background_windows=bw, only_lines=lines)\n",
     "\n",
     "\n",
@@ -591,32 +584,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/johannes/hyperspy/hyperspy/misc/eds/utils.py:491: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  composition[i] = intensity * zfactor / sumzi\n",
-      "/home/johannes/hyperspy/hyperspy/misc/eds/utils.py:447: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  / intensities[i] / kfactors[i]\n",
-      "/home/johannes/hyperspy/hyperspy/misc/material.py:42: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  atomic_percent[i] /= sum_weight\n",
-      "/home/johannes/hyperspy/hyperspy/zeta_abscorr.py:129: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  comp = np.asarray([zi / zi_sum for zi in zi_list])\n",
-      "/home/johannes/hyperspy/hyperspy/misc/material.py:357: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  weight_fraction /= np.sum(weight_fraction, 0)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution converged to less than 1e-05 weight percent, after 30 iterations.\n"
+      "Solution converged to less than 1e-05 weight percent, after 14 iterations.\n"
      ]
     }
    ],
@@ -646,11 +623,11 @@
     "# kGa_l=4.719\n",
     "kAs_k=2.835\n",
     "\n",
-    "# zeta=[As,Ga,Ge,Pd]\n",
-    "zeta = [Au,Ge,Pd]\n",
+    "zeta=[As,Ga,Ge,Pd]\n",
+    "# zeta = [Au,Ge,Pd]\n",
     "# zeta=[As,Ga,AuM,Ge,Pd]\n",
-    "# kfactors = [kAs_k,kGa_k, kGe_k,kPd_m]\n",
-    "kfactors=[kAu_m,kGe_k,kPd_m]\n",
+    "kfactors = [kAs_k,kGa_k, kGe_k,kPd_m]\n",
+    "# kfactors=[kAu_m,kGe_k,kPd_m]\n",
     "# kfactors = [kAs_k,kGa_k, kAu_l, kGe_k,kPd_m]\n",
     "\n",
     "s_comp_zeta, s_pt = s.quantification(s_ints, 'zeta', zeta)\n",
@@ -697,17 +674,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['As', 'Ga', 'Ge', 'Pd']\n"
+     ]
+    }
+   ],
    "source": [
     "plt.close('all')\n",
     "from scipy.signal import cspline1d as spline\n",
     "l=10\n",
+    "print(elements)\n",
     "for i, el in enumerate(elements):\n",
-    "    plt.figure('2_'+str(el))\n",
+    "    plt.figure('1_'+str(el)+'_nm')\n",
     "    plt.hold(True)\n",
     "    cz=s_comp_linescan_zeta[i]\n",
     "    ccl=s_comp_linescan_cl[i]\n",
@@ -718,8 +704,11 @@
     "    plt.plot(x,spline(cz.data,l))\n",
     "    plt.plot(x,spline(cab.data,l))\n",
     "#     plt.tight_layout()\n",
-    "#     plt.xlim([None,360])\n",
-    "    plt.ylim([-10,110])\n",
+    "    plt.xlim([None,360*scale])\n",
+    "    if i < 2:\n",
+    "        plt.ylim([-10,60])\n",
+    "    else:\n",
+    "        plt.ylim([-10,110])\n",
     "    plt.legend(['CL','Zeta','Zeta (abs)'],loc='best')\n",
     "    plt.grid(axis='y')\n",
     "    plt.xlabel('X (nm)')\n",
@@ -728,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -737,16 +726,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Pd', 'Ge', 'Au']\n"
+      "['As', 'Ga', 'Ge', 'Pd']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0d95eced68>"
+       "<matplotlib.legend.Legend at 0x2e028992908>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,9 +750,9 @@
     "    x = np.arange(len(cab.data))*scale\n",
     "    plt.plot(x,spline(cab.data,l))\n",
     "    plt.tight_layout()\n",
-    "#     plt.xlim([None,360])\n",
+    "    plt.xlim([None,360*scale])\n",
     "    plt.ylim([-10,110])\n",
-    "    plt.xlabel('X (pixels)')\n",
+    "    plt.xlabel('X (nm)')\n",
     "    plt.ylabel('Composition (%)')\n",
     "elements.reverse()\n",
     "print(elements)\n",
@@ -1209,7 +1198,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
